--- a/.github/workflows/openwrt.yml
+++ b/.github/workflows/openwrt.yml
@@ -42,7 +42,7 @@ jobs:
           
       - name: OpenWrt OS x86_64 make
         if: (github.event.inputs.cmd == 'os')
-        working-directory: /openwrt
+        #working-directory: /openwrt
         run: |
           curl -fsSL https://raw.githubusercontent.com/civenz/github-actions/main/shell/openwrt-os-x86_64.sh -o run.sh
           sh run.sh
